--- a/fimco/pochi/templates/pochi/create_group.html
+++ b/fimco/pochi/templates/pochi/create_group.html
@@ -17,6 +17,7 @@
                                         <span class="sr-only">Close</span>
                                     </button>
                                     <p><strong>{{ message }}</strong></p>
+                                    <button type="button" class="btn btn-danger" data-dismiss="alert">OK</button>
                                 </div>
                             </div>
                         {% endif %}
