--- a/fimco/pochi/static/pochi/css/dashboard.css
+++ b/fimco/pochi/static/pochi/css/dashboard.css
@@ -1,28 +1,18 @@
-/*body{*/
-    /*color: #ffffff;*/
-/*}*/
-@media screen and (max-width: 480px){
-	#grid[data-columns]::before {
-		content: '1 .column.size-1of1';
-	}
+.grow {
+  -webkit-transition:all 0.5s ease-out;
+  -moz-transition:all 0.5s ease-out;
+  -ms-transition:all 0.5s ease-out;
+  -o-transition:all 0.5s ease-out;
+  transition:all 0.5s ease-out;
 }
 
-@media screen and (min-width: 481px) and (max-width: 768px) {
-	#grid[data-columns]::before {
-		content: '2 .column.size-1of2';
-	}
+.grow:hover {
+  -webkit-transform:scale(1.1);
+  -moz-transform:scale(1.1);
+  -ms-transform:scale(1.1);
+  -o-transform:scale(1.1);
+  transform:scale(1.1);
 }
-@media screen and (min-width: 769px) {
-	#grid[data-columns]::before {
-		content: '3 .column.size-1of3';
-	}
-}
-
-/* Again, you’re free to use and define the classes: */
-.column { float: left; }
-.size-1of1 { width: 100%; }
-.size-1of2 { width: 50%; }
-.size-1of3 { width: 33.333%; }
 
 .box {
     margin: 0 10px 20px;
@@ -31,304 +21,3 @@
 #aside nav h3 {
     font-size: 14px;
 }
-
-.btn {
-    font-weight: 400;
-    opacity: 0.7;
-    filter: alpha(opacity=80);
-    padding: 8px 16px;
-    text-shadow: none;
-}
-.btn:hover {
-    opacity: 1;
-    filter: alpha(opacity=100);
-    color: #fff;
-}
-.card .btn, .card-1 .btn {
-    font-weight: bold;
-}
-.btn-neutral {
-    border-color: #FFFFFF;
-    color: #FFFFFF;
-}
-.btn-round {
-    border-width: 1px;
-    border-radius: 30px !important;
-    padding: 9px 18px;
-}
-.btn-center, .text-center {
-    text-align: center;
-}
-.btn-info:active:hover {
-    border-color: #FFFFFF;
-}
-.filter {
-    -webkit-transition: all 150ms linear;
-    -moz-transition: all 150ms linear;
-    -o-transition: all 150ms linear;
-    transition: all 150ms linear;
-}
-.card .filter {
-    position: absolute;
-    z-index: 2;
-    background-color: rgba(0, 0, 0, 0.76);
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    opacity: 0;
-    filter: alpha(opacity=0);
-}
-.filter.filter-blue {
-    background: #003d7a;
-    background: radial-gradient(ellipse at center, #533ce1 0%, #003d7a 100%);
-    background-size: 250% 250%;
-}
-.card {
-    border-radius: 6px;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.23);
-    background-color: #FFFFFF;
-    margin-bottom: 70px;
-    position: relative;
-    max-width: 320px;
-    margin-left: auto;
-    margin-right: auto;
-    cursor: pointer;
-}
-.card[data-color="navy"], .card-1[data-color="navy"] {
-    background: #70B8FF;
-    background: radial-gradient(ellipse at center, #002952 0%, #70B8FF 100%);
-    background-size: 250% 250%;
-}
-.card .footer {
-    position: relative;
-    z-index: 3;
-    padding: 0 15px 15px;
-}
-.card.card-with-border .footer {
-    padding-bottom: 25px;
-}
-.card.card-just-text .content {
-    padding: 50px 65px;
-    text-align: center;
-}
-.card h4, .card-1 h4 {
-    color: #fff;
-    font-size: 24px;
-    line-height: 30px;
-}
-.card h6, .card .h6 {
-    margin: 0;
-    color: #fff;
-    font-size: 14px;
-    font-weight: 600;
-    text-transform: uppercase;
-}
-.card p, .card-1 p {
-    line-height: 1.3;
-}
-.card .title, .card-info .title {
-    position: relative;
-    z-index: 3;
-}
-.card > .title, .card-info .title {
-    color: #ffffff;
-    margin: 0;
-    padding: 30px 0 0;
-}
-.card .description {
-    font-size: 16px;
-    position: relative;
-    z-index: 3;
-}
-.card .content .title {
-    margin: 10px 0 20px 0;
-}
-.card[data-background="color"] .description {
-    color: #FFFFFF;
-}
-
-.card[data-background="image"] .title, .card[data-background="color"] .title {
-    color: #FFFFFF;
-    font-weight: bold;
-}
-.card[data-background="image"] .content, .card[data-background="color"] .content {
-    color: #FFFFFF;
-}
-.card[data-background="image"] .filter, .card[data-background="color"] .filter {
-    border-radius: 6px;
-}
-.card[data-background="image"] .filter {
-    opacity: 0.55;
-    filter: alpha(opacity=55.0);
-}
-.card.card-just-text .content {
-    padding: 50px 65px;
-    text-align: center;
-}
-.card.card-with-border .content {
-    padding: 15px 15px 25px 15px;
-}
-.card .content {
-    padding: 15px 15px 5px 15px;
-    position: relative;
-    z-index: 3;
-}
-.card .content .price {
-    border: 2px solid rgba(255, 255, 255, 0.7);
-    color: white;
-    border-radius: 50%;
-    width: 152px;
-    height: 152px;
-    margin: 50px auto;
-    text-align: center;
-    vertical-align: middle;
-    line-height: 200px;
-}
-.card .content .price h4 {
-    margin: 5px 0 0;
-    font-size: 36px;
-}
-.card .content .price h6 {
-    margin-top: 45px;
-    font-size: 16px;
-}
-.card[data-background="image"] {
-    text-shadow: 0 1px 10px rgba(0, 0, 0, 0.5);
-}
-.card[data-background="image"].card-with-border:after, .card[data-background="color"].card-with-border:after {
-    border: 1px solid rgba(255, 255, 255, 0.45);
-}
-.card-with-border:after {
-    position: absolute;
-    display: block;
-    width: calc(100% - 10px);
-    height: calc(100% - 10px);
-    content: "";
-    top: 5px;
-    left: 5px;
-    border: 1px solid rgba(255, 255, 255, 0.75);
-    z-index: 1;
-    border-radius: 5px;
-}
-
-/*********************************Other Cards*********************************/
-
-.card-wrap {
-  /*margin: 10px;*/
-    text-align: -webkit-center;
-    font-size: 14px;
-    font-weight: 500;
-  -webkit-transform: perspective(800px);
-          transform: perspective(800px);
-  -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
-  cursor: pointer;
-}
-.card-wrap:hover .card-info {
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
-}
-.card-wrap:hover .card-info p {
-  opacity: 1;
-}
-.card-wrap:hover .card-info, .card-wrap:hover .card-info p {
-  -webkit-transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
-  transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
-}
-.card-wrap:hover .card-info:after {
-  -webkit-transition: 5s cubic-bezier(0.23, 1, 0.32, 1);
-  transition: 5s cubic-bezier(0.23, 1, 0.32, 1);
-  opacity: 1;
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
-}
-.card-wrap:hover .card-bg {
-  -webkit-transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1), opacity 5s cubic-bezier(0.23, 1, 0.32, 1);
-  transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1), opacity 5s cubic-bezier(0.23, 1, 0.32, 1);
-  opacity: 0.8;
-}
-.card-wrap:hover .card {
-  -webkit-transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1), box-shadow 2s cubic-bezier(0.23, 1, 0.32, 1);
-  transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1), box-shadow 2s cubic-bezier(0.23, 1, 0.32, 1);
-  box-shadow: rgba(255, 255, 255, 0.2) 0 0 40px 5px, white 0 0 0 1px, rgba(0, 0, 0, 0.66) 0 30px 60px 0, inset #333 0 0 0 5px, inset white 0 0 0 6px;
-}
-
-.card-1 {
-  position: relative;
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 240px;
-          flex: 0 0 240px;
-  width: 240px;
-  height: 320px;
-  background-color: #333;
-  overflow: hidden;
-  border-radius: 10px;
-  /*box-shadow: rgba(0, 0, 0, 0.66) 0 30px 60px 0, inset #333 0 0 0 5px, inset rgba(255, 255, 255, 0.5) 0 0 0 6px;*/
-  -webkit-transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-  transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-}
-
-.card-bg {
-  opacity: 0.5;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  padding: 20px;
-  background: no-repeat center;
-  background-size: cover;
-  -webkit-transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95), opacity 5s 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-  transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95), opacity 5s 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-}
-
-.card-info {
-  padding: 20px;
-  position: absolute;
-  bottom: 0;
-  color: #fff;
-  -webkit-transform: translateY(40%);
-          transform: translateY(40%);
-  -webkit-transition: 0.6s 1.6s cubic-bezier(0.215, 0.61, 0.355, 1);
-  transition: 0.6s 1.6s cubic-bezier(0.215, 0.61, 0.355, 1);
-}
-.card-info p {
-  opacity: 0;
-  line-height: 1.5em;
-  text-shadow: black 0 2px 3px;
-  -webkit-transition: 0.6s 1.6s cubic-bezier(0.215, 0.61, 0.355, 1);
-  transition: 0.6s 1.6s cubic-bezier(0.215, 0.61, 0.355, 1);
-}
-.card-info * {
-  position: relative;
-  z-index: 1;
-}
-.card-info:after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 0;
-  width: 100%;
-  height: 100%;
-  background-image: -webkit-linear-gradient(top, transparent 0%, rgba(0, 0, 0, 0.6) 100%);
-  background-image: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.6) 100%);
-  background-blend-mode: overlay;
-  opacity: 0;
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%);
-  -webkit-transition: 5s 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-  transition: 5s 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-}
-
-.card-info h1 {
-  margin: 0;
-  font-weight: 700;
-  color: #fff;
-  text-shadow: rgba(0, 0, 0, 0.5) 0 10px 10px;
-}
-
-/*canvas{*/
-    /*position: relative;*/
-    /*width:80vw*/
-/*}*/
