--- a/fimco/pochi/templates/pochi/account.html
+++ b/fimco/pochi/templates/pochi/account.html
@@ -31,6 +31,7 @@
                                     <span class="sr-only">Close</span>
                                 </button>
                                 <strong>{{ message }}</strong>
+                                <button type="button" class="btn btn-success" data-dismiss="alert">OK</button>
                             </div>
                         </div>
                     {% endfor %}
@@ -71,7 +72,7 @@
                             <br />
 
                             <label>Account number
-                                <input type="text" class="form-control masked" name="account" data-format="999999999999999">
+                                <input type="text" class="form-control" name="account">
                             </label>
 
                             <br />
