--- a/fimco/pochi/templates/pochi/group_profile.html
+++ b/fimco/pochi/templates/pochi/group_profile.html
@@ -16,40 +16,16 @@
                         <p class="lead">TZS {{ account.balance }}</p>
                     </div>
                     <div class="col-xs-6">
-                        <p class="lead">Interest</p>
-                        <p class="lead">TZS 0</p>
+                        <p class="lead">Monthly Interest to-date</p>
+                        {% if account.ts_balance %}
+                        <p class="lead"> TZS {{ account.ts_balance }}</p>
+                        {% else %}
+                        <p class="lead"> TZS 0.0</p>
+                        {% endif %}
                     </div>
                 </div>
             </div>
             {% if statement %}
-                <div class="statements">
-                    {% for statement in statements|slice:":3" %}
-                        <div class="row statement">
-                            <div class="col-xs-3">
-                                <div class="row">
-                                    <div class="col-xs-6 col-md-2 col-lg-2 text-center"
-                                         style="padding: 15px">
-                                        <i class="et-wallet"></i>
-                                    </div>
-                                    <div class="col-xs-6">
-                                        <div class="row">{{ statement.service }}</div>
-                                        <div class="row">{{ statement.channel }}</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xs-3">
-                                <div class="row">{{ statement.currency }} {{ statement.amount }}</div>
-                                <div class="row">{{ statement.currency }} {{ statement.charges }}</div>
-                            </div>
-                            <div class="col-xs-3">
-                                {{ statement.dest_account }}
-                            </div>
-                            <div class="col-xs-3">
-                                {{ statement.status }}
-                            </div>
-                        </div>
-                    {% endfor %}
-                </div>
                 <div class="row margin-top-20 mid-align">
                     <div class="col-xs-12 col-md-4 col-lg-3 col-lg-offset-4">
                         <a href="{% url 'group_statement' group %}" class="btn btn-featured btn-primary">
@@ -63,6 +39,47 @@
                     <div class="col-xs-12 col-md-4 col-lg-3 col-lg-offset-4">
                         <div class="alert alert-default margin-bottom-30">
                             <strong>{{ group }} has no transactions!</strong>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
+            {% if pendings %}
+                <div class="row margin-top-20 mid-align">
+                    <div class="panel panel-default">
+                        <div class="panel-heading text-center">
+                            <span class="title elipsis text-danger">
+                                <strong>pending transactions</strong>
+                            </span>
+                        </div>
+
+                        <!-- panel content -->
+                        <div class="panel-body">
+                            <div class="table-responsive">
+                                <table class="table table-vertical-middle nomargin">
+                                    <thead>
+                                        <tr>
+                                            <th>Date</th>
+                                            <th>Service</th>
+                                            <th>Channel</th>
+                                            <th>Mode</th>
+                                            <th>Amount</th>
+                                            <th>Charges</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {% for pending in pendings %}
+                                            <tr>
+                                                <td>{{ pending.full_timestamp }}</td>
+                                                <td>{{ pending.service }}</td>
+                                                <td>{{ pending.channel }}</td>
+                                                <td>{{ pending.mode }}</td>
+                                                <td>{{ pending.amount }}</td>
+                                                <td>{{ pending.charge }}</td>
+                                            </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
