--- a/fimco/pochi/templates/pochi/home.html
+++ b/fimco/pochi/templates/pochi/home.html
@@ -16,7 +16,7 @@
                         <p class="lead"> TZS {{ account.balance }}</p>
                     </div>
                     <div class="col-xs-6">
-                        <p class="lead">Interest</p>
+                        <p class="lead">Monthly Interest to-date</p>
                         {% if account.ts_balance %}
                         <p class="lead"> TZS {{ account.ts_balance }}</p>
                         {% else %}
@@ -33,6 +33,47 @@
                     </a>
                 </div>
             </div>
+            {% if pendings %}
+                <div class="row margin-top-20 mid-align">
+                    <div class="panel panel-default">
+                        <div class="panel-heading text-center">
+                            <span class="title elipsis text-danger">
+                                <strong>pending transactions</strong>
+                            </span>
+                        </div>
+
+                        <!-- panel content -->
+                        <div class="panel-body">
+                            <div class="table-responsive">
+                                <table class="table table-vertical-middle nomargin">
+                                    <thead>
+                                        <tr>
+                                            <th>Date</th>
+                                            <th>Service</th>
+                                            <th>Channel</th>
+                                            <th>Mode</th>
+                                            <th>Amount</th>
+                                            <th>Charges</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {% for pending in pendings %}
+                                            <tr>
+                                                <td>{{ pending.full_timestamp }}</td>
+                                                <td>{{ pending.service }}</td>
+                                                <td>{{ pending.channel }}</td>
+                                                <td>{{ pending.mode }}</td>
+                                                <td>{{ pending.amount }}</td>
+                                                <td>{{ pending.charge }}</td>
+                                            </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
         </div>
     </section>
 {% endblock %}
