--- a/fimco/pochi/templates/pochi/mobile_withdraw.html
+++ b/fimco/pochi/templates/pochi/mobile_withdraw.html
@@ -16,6 +16,7 @@
                                     <span class="sr-only">Close</span>
                                 </button>
                                 <p><strong>{{ message }}</strong></p>
+                                <button type="button" class="btn btn-danger" data-dismiss="alert">OK</button>
                             </div>
                         </div>
                     {% elif message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
@@ -27,7 +28,7 @@
                                 </button>
                                 <p><strong>{{ message }}</strong></p>
                                 <a href="{% url 'confirm' %}" class="btn btn-info btn-sm margin-top-10">Proceed withdrawal</a>
-                                <a href="#" class="btn btn-default btn-sm margin-top-10">Cancel</a>
+                                <a href="{{ request.META.HTTP_REFERER }}" class="btn btn-default btn-sm margin-top-10">Cancel</a>
                             </div>
                         </div>
                     {% else %}
@@ -38,6 +39,7 @@
                                     <span class="sr-only">Close</span>
                                 </button>
                                 <p><strong>{{ message }}</strong></p>
+                                <button type="button" class="btn btn-success" data-dismiss="alert">OK</button>
                             </div>
                         </div>
                     {% endif %}
