--- a/fimco/fimcosite/templates/corporate.html
+++ b/fimco/fimcosite/templates/corporate.html
@@ -99,7 +99,7 @@
                             <div class="tab-content mt-60">
                                 <div role="tabpanel" class="tab-pane {% if step1 %}{{ step1 }}{% endif %}" id="step1">
                                     <h4 class="text-center">Company Details Form</h4>
-                                    <form action="{% url 'corporate' %}" method="post" enctype="multipart/form-data">
+                                    <form class="validate" action="{% url 'corporate' %}" method="post" enctype="multipart/form-data">
                                     {% csrf_token %}
                                         {% if cForm.non_field_errors %}
                                             {% for general_error in cForm.non_field_errors %}
@@ -153,7 +153,7 @@
 
                                 <div role="tabpanel" class="tab-pane {% if step4 %}{{ step4 }}{% endif %}" id="step4">
                                     <h4 class="text-center">Company KYC Form</h4>
-                                    <form action="{% url 'corporate' %}" method="post" enctype="multipart/form-data">
+                                    <form class="validate" action="{% url 'corporate' %}" method="post" enctype="multipart/form-data">
                                     {% csrf_token %}
                                         {% if kForm.non_field_errors %}
                                             {% for general_error in kForm.non_field_errors %}
@@ -255,7 +255,7 @@
                                         BOT & DSE CDS Accounts Form
                                         <small class="text-muted">(optional)</small>
                                     </h4>
-                                    <form action="{% url 'corporate' %}" method="post" enctype="multipart/form-data">
+                                    <form class="validate" action="{% url 'corporate' %}" method="post" enctype="multipart/form-data">
                                     {% csrf_token %}
                                         <fieldset>
                                             <div class="row">
@@ -298,7 +298,7 @@
 
                                 <div role="tabpanel" class="tab-pane {% if step3 %}{{ step3 }}{% endif %}" id="step3">
                                     <h4 class="text-center">Company representative details Form</h4>
-                                    <form action="{% url 'corporate' %}" method="post" enctype="multipart/form-data">
+                                    <form class="validate" action="{% url 'corporate' %}" method="post" enctype="multipart/form-data">
                                     {% csrf_token %}
                                         {% if uForm.non_field_errors %}
                                             {% for general_error in uForm.non_field_errors %}
@@ -420,7 +420,7 @@
                                 </div>
                                 <div role="tabpanel" class="tab-pane {% if step5 %}{{ step5 }}{% endif %}" id="step5">
                                     <h4 class="text-center">Bank Indemnity Form</h4>
-                                    <form action="{% url 'create_form' 'corporate' %}" method="post" enctype="multipart/form-data">
+                                    <form class="validate" action="{% url 'create_form' 'corporate' %}" method="post" enctype="multipart/form-data">
                                     {% csrf_token %}
                                         <fieldset>
                                             <div class="row">
@@ -462,9 +462,9 @@
                                             <div class="row">
                                                 <div class="col-md-6 col-sm-6">
                                                     <label>Bank branch address *</label>
-                                                    {{ bForm.branch_address }}
-                                                    {% if bForm.branch_address.errors %}
-                                                        {% for error in bForm.branch_address.errors %}
+                                                    {{ bForm.bank_address }}
+                                                    {% if bForm.bank_address.errors %}
+                                                        {% for error in bForm.bank_address.errors %}
                                                             <div class="alert alert-mini alert-danger mb-30">
                                                                 <strong>{{ error|escape }}</strong>
                                                             </div>
@@ -500,7 +500,7 @@
                             <h4 class="text-center">Company representative details Form</h4>
                         </div>
                         <div class="card-block">
-                            <form action="{% url 'corporate' %}" method="post" enctype="multipart/form-data">
+                            <form class="validate" action="{% url 'corporate' %}" method="post" enctype="multipart/form-data">
                             {% csrf_token %}
                                 <fieldset>
                                     <input type="hidden" name="add_rep" value="" />
